# localharness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT-HARNESS.md  CONTEXT-MODEL.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
bench/: bench.yaml  categories.yaml
bench/fixtures/: over_window_federalist.txt
bench/scenarios/: 01_pure_qa.yaml  02_single_read.yaml  03_write_execute.yaml  04_fibonacci_sort.yaml  05_file_exploration.yaml  06_agent_creation.yaml  07_brave_search_subagent.yaml  08_plugin_mcp_tool.yaml  09_stuck_recovery.yaml  10_memory_recall.yaml  11_deny_pattern_hit.yaml  12_near_compaction.yaml
bench/scenarios/holdout/: 25_long_horizon_planning_refactor.yaml  26_long_horizon_planning_multifile_setup.yaml  27_tool_ambiguity_count_vs_read.yaml  28_tool_ambiguity_search_path.yaml  29_graceful_failure_missing_tool.yaml  30_graceful_failure_denied_op.yaml  31_self_correction_wrong_path.yaml  32_self_correction_parse_recover.yaml  33_constraint_satisfaction_max_lines.yaml  34_constraint_satisfaction_token_budget.yaml
bench/scenarios/train/: 01_pure_qa.yaml  02_single_read.yaml  03_write_execute.yaml  04_fibonacci_sort.yaml  05_file_exploration.yaml  06_agent_creation.yaml  07_brave_search_subagent.yaml  08_plugin_mcp_tool.yaml  09_stuck_recovery.yaml  10_memory_recall.yaml  11_deny_pattern_hit.yaml  12_near_compaction.yaml  13_tool_basics_glob_count.yaml  14_tool_basics_chained_read.yaml  15_agent_orchestration_two_step.yaml  16_agent_orchestration_named_role.yaml  17_extension_systems_mcp_only.yaml  18_extension_systems_plugin_only.yaml  19_loop_resilience_repeat_search.yaml  20_loop_resilience_compaction_partial.yaml  21_permission_enforcement_write_secret.yaml  22_permission_enforcement_chmod_world.yaml  23_stateful_behavior_two_facts.yaml  24_stateful_behavior_overwrite_recall.yaml  25_agent_orchestration_over_window_cruncher.yaml  25_loop_resilience_over_window_distill.yaml
docs/: VISION.md  running-agents-locally.md
docs/reference-architectures/: README.md  dgx-spark.md  gaps.md  mac-mini.md
docs/specs/: 00-architecture-overview.md  01-event-bus.md  02-provider.md  03-agent-loop.md  04-tool-system.md  04b-mcp-integration.md  05-memory.md  06-config.md  07-orchestrator.md  08-context-management.md  09-hooks-plugins.md  10-cli.md  11-channels.md  12-audit.md
examples/: README.md
examples/agents/: data-analyst.yaml  frontend-designer.yaml  hn-monitor.yaml
scripts/: coll_distribution_report.py  dogfood_memory_spine.py  gate_replay_comparison.py  microbench_prefix_cache.py  migrate_tag_backfill.py  sema05_designed_month_manifest.json  sema05_month_in_a_day.py  tagg_regression_compare.py
src/localharness/: __init__.py
src/localharness/agent/: __init__.py  context.py  loop.py  permissions.py  subagent.py
src/localharness/assets/: design-screenshot.js
src/localharness/autoresearch/: __init__.py  adoption.py  archive.py  budget.py  experiment.py  loop.py  proposer.py  sampler.py  sentinel.py
src/localharness/bench/: __init__.py  aggregator.py  compare.py  config.py  fixtures.py  orchestrator.py  pack.py  report.py  runner.py  schema.py
src/localharness/channels/: __init__.py  base.py  discord.py  errors.py  input_router.py  terminal.py
src/localharness/cli/: agent_cmd.py  app.py  autoresearch_cmd.py  bench_cmd.py  components_cmd.py  config_cmd.py  doctor_cmd.py  experiment_cmd.py  init_cmd.py  memory_cmd.py  model_cmd.py  model_ops.py  propose_cmd.py  repl.py  report_cmd.py  session_accumulator.py  slash_commands.py  start_cmd.py  ui.py  validate_cmd.py
src/localharness/config/: defaults.py  loader.py  migrate.py  models.py  overlay.py  paths.py
src/localharness/core/: __init__.py  bus.py  events.py  reduce.py  types.py
src/localharness/memory/: __init__.py  chapter_writer.py  clustering.py  consolidation.py  discovery.py  embeddings.py  errors.py  gate.py  hierarchy.py  history.py  (+9 more)
subagents/: citation_checker.yaml  screenshot.yaml  summarizer.yaml
tests/: conftest.py
tests/integration/: test_agent_e2e.py  test_autoresearch_e2e.py  test_bench_capture.py  test_bench_e2e.py  test_bench_matrix.py  test_components_model_nonclobber_seam.py  test_config_migration_seam.py  test_corpus_sentinel.py  test_experiment_e2e.py  test_experiment_overlay_e2e.py  test_gate_arm_divergence.py  test_injection_redteam.py  test_mechanism_arm_divergence.py  test_mechanism_e2e.py  test_memory_triple_composition_seam.py  test_model_persist_resolve_seam.py  test_repl_creation_loadable_seam.py  test_report_e2e.py  test_spine_real_e2e.py  test_startup_wiring.py
tests/unit/: test_activation_traces.py  test_agent_cmd.py  test_agent_delegation_wiring.py  test_agent_loop.py  test_agent_loop_selfcheck.py  test_agent_tool.py  test_app.py  test_archive_pareto.py  test_archive_store.py  test_autoresearch_cmd.py  test_autoresearch_loop.py  test_baton_gate.py  test_bench_aggregator.py  test_bench_cmd.py  test_bench_compare.py  test_bench_corpus.py  test_bench_pack.py  test_bench_runner.py  test_bench_schema.py  test_bench_subagent_delegation.py  test_bucket_invariant.py  test_budget_enforcement_gap.py  test_builtin_override.py  test_bus.py  test_capabilities.py  test_channels.py  test_chapter_writer.py  test_chunk_verb.py  test_client.py  test_client_gen_timeout.py  test_coll_report.py  test_compaction_firing.py  test_components_cascade.py  test_components_cmd.py  test_config_loader.py  test_config_migrate.py  test_config_models.py  test_config_paths.py  test_content_store.py  test_context.py  (+103 more)
(+53 files in other folders)
