[project]
name = "localharness"
version = "0.5.3"
description = "Model-agnostic hierarchical agent harness for local LLMs"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "ahwurm" }]
keywords = ["llm", "agents", "local-llm", "agent-harness", "vllm", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.13,<3",
    "pydantic-yaml>=1.4,<2",
    "scipy>=1.17,<2",
    "pyyaml>=6.0,<7",
    "bubus>=1.5,<2",
    "pluggy>=1.5,<2",
    "aiosqlite>=0.22,<1",
    "structlog>=25.5,<26",
    "typer>=0.25,<1",
    "rich>=15.0,<16",
    "openai>=1.0,<2",
    "httpx>=0.27",
    "ddgs>=6.0",
    "prompt-toolkit>=3.0,<4",
    "tiktoken>=0.13.0",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
dispatch = [
    "discord.py>=2.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
localharness = "localharness.cli.app:main"

[project.urls]
Homepage = "https://github.com/ahwurm/localharness"
Repository = "https://github.com/ahwurm/localharness"
Issues = "https://github.com/ahwurm/localharness/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live_vllm: opt-in real-model spine test hitting a live vLLM endpoint; skipped by default unless LOCALHARNESS_LIVE_VLLM=1 is set",
]

[tool.ruff.lint]
extend-select = ["S506"]
